# daml-rag-framework

./: .gitignore  BUILD_AND_PUBLISH.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LIMITATIONS.md  MANIFEST.in  NOTICE  PUBLISHING.md  PUSH_TO_GITHUB.md  QUICKSTART.md  QUICK_START_GITHUB.md  README.md  README_ACADEMIC.md  README_EN.md  REFERENCES.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.2.0.md  basic-test.py  check_version.py  pyproject.toml  requirements.txt  run-demo.py  setup.cfg  setup.py  simple-test.py  test-all-components.py  推送到GitHub指南.md
.github/workflows/: README.md  ci.yml  docs.yml  publish.yml
daml-rag-adapters/base/: adapter.py
daml-rag-adapters/fitness/: fitness_adapter.py
daml-rag-cli/: __init__.py  cli.py
daml-rag-cli/commands/: __init__.py  init.py
daml-rag-core/daml_rag/: __init__.py  base.py  core.py
daml-rag-core/daml_rag/config/: __init__.py  framework_config.py
daml-rag-core/daml_rag/interfaces/: learning.py  retrieval.py
daml-rag-core/daml_rag/models/: __init__.py  base.py
daml-rag-learning/: __init__.py  adaptation.py  feedback.py  memory.py  model_provider.py
daml-rag-orchestration/: __init__.py
daml-rag-retrieval/: __init__.py  embedding.py  three_tier.py  vector.py
daml-rag-retrieval/knowledge/: neo4j.py
daml-rag-retrieval/rules/: engine.py
daml-rag-retrieval/vector/: base.py  faiss.py  qdrant.py
daml_rag/: __init__.py  core.py
daml_rag/adapters/: __init__.py
daml_rag/adapters/base/: __init__.py
daml_rag/adapters/fitness/: __init__.py
daml_rag/cli/: cli.py
daml_rag/config/: __init__.py  framework_config.py
daml_rag/interfaces/: __init__.py  orchestration.py
daml_rag/learning/: README_THOMPSON_SAMPLING.md  __init__.py  adaptation.py  feedback.py  memory.py  model_provider.py  query_classifier.py  tool_learner_thompson.py
daml_rag/orchestration/: __init__.py  mcp_orchestrator.py  orchestrator.py
daml_rag/retrieval/: three_tier.py
daml_rag/retrieval/knowledge/: __init__.py
daml_rag/retrieval/rules/: __init__.py  engine.py
daml_rag/retrieval/vector/: __init__.py  base.py  faiss.py  qdrant.py
docker/: docker-compose.yml  mcp-server.dockerfile
docs/: progress.md  quickstart.md
docs/architecture/: DAML-RAG框架架构详解.md  data-cleaning-and-finetuning.md  framework-diversity-strategies.md  mcp-orchestration-architecture.md  mcp-orchestration-实际实现.md  数据清洗与微调架构.md  框架多样性探索策略.md
docs/copyright/: 软件使用说明书-DAML-RAG框架.txt
docs/theory/: 00-THEORY_EVOLUTION.md  00-理论演进历史.md  01-GraphRAG-Hybrid-Retrieval.md  01-GraphRAG混合检索理论.md  02-In-Context-Learning.md  02-推理时上下文学习理论.md  FRAMEWORK_OVERVIEW.md  框架总览.md
examples/: config_examples.py  daml_rag_mcp_server.py  fitness_qa_demo.py  frontend_feedback_system.py  intelligent_fewshot_system.py  mcp_client_example.py  mcp_orchestrator_example.py  typescript_mcp_client.ts
examples/fitness-coach/: README.md  app.py  requirements.txt
examples/fitness-coach/static/: index.html
framework/: __init__.py
framework.backup_20251215_224832/interfaces/: base.py  storage.py
framework.backup_20251215_224832/orchestration/: graphrag_orchestrator.py
framework.backup_20251215_224832/quality/: anti_hallucination.py
framework.backup_20251215_224832/registry/: __init__.py
framework.backup_20251215_224832/retrieval/: graph_retriever.py  three_layer_retriever.py  vector_retriever.py
framework.backup_20251215_224832/storage/: abstract_storage.py
framework/adapters/: __init__.py  base_adapter.py
framework/clients/: __init__.py  base_client.py  http_client.py  llm_client.py  mcp_client_v2.py  mcp_config_loader.py  mcp_tool_manager.py  neo4j_client.py
framework/core/: __init__.py  simple_framework_initializer.py
framework/interfaces/: __init__.py  base_adapter.py  orchestration.py  quality.py  result_processor.py  retrieval.py
framework/models/: __init__.py  adaptive_model_selector.py  query_complexity_classifier.py
framework/monitoring/: dag_visualizer.py  daml_workflow_monitor.py  performance_monitor.py
framework/orchestration/: __init__.py  generic_dag_orchestrator.py  mcp_orchestrator.py  tool_registry.py
framework/processors/: __init__.py  base_processor.py
framework/registry/: component_registry.py  dependency_injection.py
framework/retrieval/: __init__.py  best_practices_retriever.py  bge_enhancer.py  concurrent_optimizer.py  constraint_validator.py  enhanced_few_shot_retriever.py  graphrag.py  query_analyzer.py  reranker.py  true_three_layer_engine.py  unified_retrieval_interface.py
framework/retrieval/graph/: __init__.py  fitness_graph_schema.py  kg_full.py  neo4j_manager.py  vector_search_engine.py
framework/storage/: __init__.py  intelligent_cache_system.py  intelligent_user_profile_cache.py  metadata_database.py  user_memory.py  vector_store_abstract.py
scripts/: build.ps1  build.sh  deploy.sh  publish.ps1  publish.sh  publish_to_pypi.py  quick-start.ps1  quick-start.sh  test-install.ps1  test-install.sh
tests/: __init__.py  test_basic.py
