[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daml-rag-framework"
version = "1.0.0"
description = "Domain-Adaptive Meta-Learning RAG Framework for Vertical Domain AI Applications"
readme = "README_ACADEMIC.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "graphrag",
    "knowledge-graph",
    "artificial-intelligence",
    "machine-learning",
    "in-context-learning",
    "multi-agent-systems",
    "vertical-domain",
    "production-ready",
    "vector-database",
    "neo4j",
    "qdrant",
    "mcp",
    "model-context-protocol"
]
authors = [
    {name = "BUILD_BODY Team", email = "build-body-team@example.com"}
]
maintainers = [
    {name = "BUILD_BODY Team", email = "build-body-team@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "qdrant-client>=1.7.0",
    "neo4j>=5.14.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]

all = [
    "daml-rag-framework[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/build-body/daml-rag-framework"
Documentation = "https://github.com/build-body/daml-rag-framework/tree/main/docs"
Repository = "https://github.com/build-body/daml-rag-framework"
"Bug Tracker" = "https://github.com/build-body/daml-rag-framework/issues"
Changelog = "https://github.com/build-body/daml-rag-framework/blob/main/CHANGELOG.md"
"Theory Evolution" = "https://github.com/build-body/daml-rag-framework/blob/main/docs/theory/00-THEORY_EVOLUTION.md"
"References" = "https://github.com/build-body/daml-rag-framework/blob/main/REFERENCES.md"

[project.scripts]
daml-rag = "daml_rag_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = [
    "daml_rag",
    "daml_rag_core",
    "daml_rag_retrieval",
    "daml_rag_orchestration",
    "daml_rag_learning",
    "daml_rag_adapters",
    "daml_rag_cli",
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=daml_rag --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["daml_rag", "daml_rag_*"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

