[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daml-rag-framework"
version = "2.0.0"
description = "Domain Adaptive Multi-source Learning RAG Framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
keywords = [
    "rag",
    "retrieval",
    "graphrag",
    "vector",
    "knowledge-graph",
    "artificial-intelligence",
    "machine-learning",
    "domain-adaptive",
    "multi-source",
    "interface-driven",
    "component-registry",
    "dependency-injection",
    "three-layer-retrieval",
    "constraint-validation",
    "enterprise",
    "production-ready"
]
authors = [
    {name = "薛小川 (Xue Xiaochuan)", email = "1765563156@qq.com"}
]
maintainers = [
    {name = "薛小川 (Xue Xiaochuan)", email = "1765563156@qq.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "typing_extensions>=4.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "aiofiles>=22.1.0",
    "aiohttp>=3.8.0",
    "pandas>=1.5.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "structlog>=22.1.0",
]

[project.optional-dependencies]
vector = [
    "qdrant-client>=1.6.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "transformers>=4.33.0",
]
vector-gpu = [
    "qdrant-client>=1.6.0",
    "faiss-gpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "transformers>=4.33.0",
    "torch>=2.0.0+cu118",
]
graph = [
    "neo4j>=5.12.0",
    "py2neo>=2021.2.4",
]
cache = [
    "redis>=4.6.0",
    "aioredis>=2.0.1",
]
document = [
    "elasticsearch>=8.0.0",
    "pymongo>=4.3.0",
    "asyncpg>=0.27.0",
]
ml = [
    "torch>=1.12.0",
    "FlagEmbedding>=1.1.0",
]
api = [
    "openai>=0.27.0",
    "anthropic>=0.7.0",
]
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.0",
]
profiling = [
    "memory-profiler>=0.60.0",
    "line-profiler>=4.0.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.15.0",
]
all = [
    "daml-rag-framework[vector,graph,cache,document,ml,api,web,dev,docs,profiling,jupyter]"
]

[project.urls]
Homepage = "https://github.com/vivy1024/daml-rag-framework"
Documentation = "https://github.com/vivy1024/daml-rag-framework/tree/main/docs"
Repository = "https://github.com/vivy1024/daml-rag-framework"
"Bug Tracker" = "https://github.com/vivy1024/daml-rag-framework/issues"
Changelog = "https://github.com/vivy1024/daml-rag-framework/blob/main/CHANGELOG.md"
"Theory Evolution" = "https://github.com/vivy1024/daml-rag-framework/blob/main/docs/theory/00-THEORY_EVOLUTION.md"
"References" = "https://github.com/vivy1024/daml-rag-framework/blob/main/REFERENCES.md"

[project.scripts]
daml-rag = "daml_rag.cli.cli:main"

[tool.setuptools]
packages = ["daml_rag_framework"]
package-dir = {"" = "framework"}

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=daml_rag --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["daml_rag", "daml_rag_*"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

